<resources>
    <string name="app_name">Task</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="connection_error">Connection error ,please try again !.</string>
    <string name="invalid_email">Invalid email ,please choose valid email address</string>
    <string name="invalid_password">Password should be at least 8 characters ,contains at least\n1 uppercase character\n1 lowercase character\n1 special character\n1 number</string>
    <string name="complete_all_fields">Please enter valid email and password</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
</resources>
